--- a/src/main/webapp/app/entities/core/format/format-update.component.html
+++ b/src/main/webapp/app/entities/core/format/format-update.component.html
@@ -1,56 +1,76 @@
+<div class="create-view-page p-2">
+    <div class="row shadow">
+        <div class="col-md-12">
+            <h2 id="jhi-format-heading" jhiTranslate="gatewayApp.coreFormat.home.createOrEditLabel">Create or edit a Format</h2>
+        </div>
+        <div class="col-md-12 mt-5">
+            <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+                <div>
+                    <jhi-alert-error></jhi-alert-error>
+                    <!--<div class="form-group" [hidden]="!format.id">-->
+                    <!--<label for="id" jhiTranslate="global.field.id">ID</label>-->
+                    <!--<input type="text" class="form-control" id="id" name="id"-->
+                    <!--[(ngModel)]="format.id" readonly />-->
+                    <!--</div>-->
+                    <div class="form-group">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.name" for="field_name">Name</label>-->
+                        <mat-form-field class="w-100">
+                            <input matInput placeholder="{{ 'gatewayApp.coreFormat.name' | translate }}"
+                                type="text" name="name" id="field_name"
+                                   [(ngModel)]="format.name" required/>
+                        </mat-form-field>
+                        <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                        </div>
+                    </div>
+                    <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.clientId" for="field_clientId">Client Id</label>-->
+                        <mat-form-field class="w-100">
+                            <input matInput placeholder="{{'gatewayApp.coreFormat.clientId' | translate}}"
+                                type="text" name="clientId" id="field_clientId"
+                                   [(ngModel)]="format.clientId" required/>
+                        </mat-form-field>
+                        <div [hidden]="!(editForm.controls.clientId?.dirty && editForm.controls.clientId?.invalid)">
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.controls.clientId?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.description" for="field_description">Description</label>-->
+                        <mat-form-field class="w-100">
+                            <textarea matInput placeholder="{{'gatewayApp.coreFormat.description' | translate}}"
+                                rows="5" type="text" name="description" id="field_description"
+                                      [(ngModel)]="format.description" ></textarea>
+                        </mat-form-field>
+                    </div>
+                    <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.isDefault" for="field_isDefault">Is Default</label>-->
+                        <mat-checkbox name="isDefault" id="field_isDefault" [(ngModel)]="format.isDefault">{{'gatewayApp.coreFormat.isDefault' | translate}}</mat-checkbox>
+                    </div>
+
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button mat-raised-button color="warn" class="mr-3"
+                        type="button" id="cancel-save" (click)="previousState()">
+                        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+                    </button>
+                    <button mat-raised-button
+                        type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving">
+                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 <div class="row justify-content-center">
     <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
-            <h2 id="jhi-format-heading" jhiTranslate="gatewayApp.coreFormat.home.createOrEditLabel">Create or edit a Format</h2>
-            <div>
-                <jhi-alert-error></jhi-alert-error>
-                <div class="form-group" [hidden]="!format.id">
-                    <label for="id" jhiTranslate="global.field.id">ID</label>
-                    <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="format.id" readonly />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.name" for="field_name">Name</label>
-                    <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="format.name" required/>
-                    <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                    </div>
-                </div>
-                <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.isDefault" for="field_isDefault">Is Default</label>
-                    <input type="checkbox" class="form-control" name="isDefault" id="field_isDefault"
-                        [(ngModel)]="format.isDefault" />
-                </div>
-                <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.clientId" for="field_clientId">Client Id</label>
-                    <input type="text" class="form-control" name="clientId" id="field_clientId"
-                        [(ngModel)]="format.clientId" required/>
-                    <div [hidden]="!(editForm.controls.clientId?.dirty && editForm.controls.clientId?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.clientId?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreFormat.description" for="field_description">Description</label>
-                    <textarea rows="5" type="text" class="form-control" name="description" id="field_description"
-                              [(ngModel)]="format.description" ></textarea>
-                </div>
 
-            </div>
-            <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
-                    <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-                </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                </button>
-            </div>
-        </form>
     </div>
 </div>
