--- a/src/main/webapp/app/entities/core/status/status-update.component.html
+++ b/src/main/webapp/app/entities/core/status/status-update.component.html
@@ -1,51 +1,62 @@
-<div class="row justify-content-center">
-    <div class="col-8">
-        <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+<div class="create-view-page p-2">
+    <div class="row- shadow">
+        <div class="col-md-12">
             <h2 id="jhi-status-heading" jhiTranslate="gatewayApp.coreStatus.home.createOrEditLabel">Create or edit a Status</h2>
-            <div>
-                <jhi-alert-error></jhi-alert-error>
-                <div class="form-group" [hidden]="!status.id">
-                    <label for="id" jhiTranslate="global.field.id">ID</label>
-                    <input type="text" class="form-control" id="id" name="id"
-                        [(ngModel)]="status.id" readonly />
-                </div>
-                <div class="form-group">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.name" for="field_name">Name</label>
-                    <input type="text" class="form-control" name="name" id="field_name"
-                        [(ngModel)]="status.name" required/>
-                    <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
+        </div>
+        <div class="col-md-12 mt-5">
+            <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
+                <div>
+                    <jhi-alert-error></jhi-alert-error>
+                    <!--<div class="form-group" [hidden]="!status.id">-->
+                        <!--<label for="id" jhiTranslate="global.field.id">ID</label>-->
+                        <!--<input type="text" class="form-control" id="id" name="id"-->
+                               <!--[(ngModel)]="status.id" readonly />-->
+                    <!--</div>-->
+                    <div class="form-group">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.name" for="field_name">Name</label>-->
+                        <mat-form-field class="w-100">
+                            <input matInput placeholder="{{'gatewayApp.coreStatus.name' | translate}}"
+                                type="text" name="name" id="field_name"
+                                   [(ngModel)]="status.name" required/>
+                        </mat-form-field>
+                        <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.controls.name?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.clientId" for="field_clientId">Client Id</label>
-                    <input type="text" class="form-control" name="clientId" id="field_clientId"
-                        [(ngModel)]="status.clientId" required/>
-                    <div [hidden]="!(editForm.controls.clientId?.dirty && editForm.controls.clientId?.invalid)">
-                        <small class="form-text text-danger"
-                        [hidden]="!editForm.controls.clientId?.errors?.required" jhiTranslate="entity.validation.required">
-                        This field is required.
-                        </small>
+                    <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.clientId" for="field_clientId">Client Id</label>-->
+                        <mat-form-field class="w-100">
+                            <input matInput placeholder="{{'gatewayApp.coreStatus.clientId' | translate}}"
+                                type="text" name="clientId" id="field_clientId"
+                                   [(ngModel)]="status.clientId" required/>
+                        </mat-form-field>
+                        <div [hidden]="!(editForm.controls.clientId?.dirty && editForm.controls.clientId?.invalid)">
+                            <small class="form-text text-danger"
+                                   [hidden]="!editForm.controls.clientId?.errors?.required" jhiTranslate="entity.validation.required">
+                                This field is required.
+                            </small>
+                        </div>
                     </div>
-                </div>
-                <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
-                    <label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.isDefault" for="field_isDefault">Is Default</label>
-                    <input type="checkbox" class="form-control" name="isDefault" id="field_isDefault"
-                        [(ngModel)]="status.isDefault" />
-                </div>
+                    <div class="form-group" *jhiHasAnyAuthority="['ROLE_ADMIN']">
+                        <!--<label class="form-control-label" jhiTranslate="gatewayApp.coreStatus.isDefault" for="field_isDefault">Is Default</label>-->
+                        <mat-checkbox name="isDefault" id="field_isDefault" [(ngModel)]="status.isDefault">{{'gatewayApp.coreStatus.isDefault' | translate}}</mat-checkbox>
+                    </div>
 
-            </div>
-            <div>
-                <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
-                    <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-                </button>
-                <button type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving" class="btn btn-primary">
-                    <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                </button>
-            </div>
-        </form>
+                </div>
+                <div class="d-flex justify-content-end">
+                    <button  mat-raised-button color="warn" class="mr-3"
+                        type="button" id="cancel-save" (click)="previousState()">
+                        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+                    </button>
+                    <button mat-raised-button
+                        type="submit" id="save-entity" [disabled]="editForm.form.invalid || isSaving">
+                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+                    </button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
