--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -626,7 +626,7 @@ $xs-sm-font-size: 12px;
     > div {
         max-width: 800px;
         background: white;
-        padding: 0 10px 50px 10px;
+        padding: 20px 10px 50px 10px;
     }
     h2 {
         border: solid 5px #dc3545;
@@ -634,8 +634,10 @@ $xs-sm-font-size: 12px;
         padding-left: 12px;
     }
     table {
-        td,
-        th {
+        td {
+            padding: 0.5rem;
+        }
+        thead th {
             padding: 0.5rem;
         }
         .action-column {
